--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <script>
-  function httpGetAsync(theUrl, callback)
+// this is a comment from the VPS 
+ function httpGetAsync(theUrl, callback)
 {
     var xmlHttp = new XMLHttpRequest();
     xmlHttp.onreadystatechange = function() { 
